{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 203,
  "lineage": "55462ac7-0cfb-2512-8a13-988fe4ff0b7d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:731694558213:loadbalancer/app/test-lb-tf/4cbce79459d577d8",
            "arn_suffix": "app/test-lb-tf/4cbce79459d577d8",
            "dns_name": "test-lb-tf-1063008788.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:731694558213:loadbalancer/app/test-lb-tf/4cbce79459d577d8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0e0f3a0de0ec3afc5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d124b4cd033a00c"
              },
              {
                "subnet_id": "subnet-0503ea6b21c56b6cd"
              },
              {
                "subnet_id": "subnet-0d8ba97fa39291812"
              }
            ],
            "subnets": [
              "subnet-03d124b4cd033a00c",
              "subnet-0503ea6b21c56b6cd",
              "subnet-0d8ba97fa39291812"
            ],
            "vpc_id": "vpc-046676da63bf0342e",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_subnet.default_subnet_c",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731694558213:subnet/subnet-0d8ba97fa39291812",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-0d8ba97fa39291812",
            "map_public_ip_on_launch": true,
            "owner_id": "731694558213",
            "vpc_id": "vpc-046676da63bf0342e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731694558213:subnet/subnet-0503ea6b21c56b6cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-0503ea6b21c56b6cd",
            "map_public_ip_on_launch": true,
            "owner_id": "731694558213",
            "vpc_id": "vpc-046676da63bf0342e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731694558213:subnet/subnet-03d124b4cd033a00c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-03d124b4cd033a00c",
            "map_public_ip_on_launch": true,
            "owner_id": "731694558213",
            "vpc_id": "vpc-046676da63bf0342e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731694558213:vpc/vpc-046676da63bf0342e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0107fa37c562dedea",
            "default_route_table_id": "rtb-0766561c4e0821739",
            "default_security_group_id": "sg-0fb9500f7410fee95",
            "dhcp_options_id": "dopt-07d88834ae3062586",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-046676da63bf0342e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0766561c4e0821739",
            "owner_id": "731694558213"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:731694558213:listener/app/test-lb-tf/4cbce79459d577d8/322fca3b66e09e14",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:731694558213:targetgroup/target-group/1d6c840de77c8ad0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:731694558213:listener/app/test-lb-tf/4cbce79459d577d8/322fca3b66e09e14",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:731694558213:loadbalancer/app/test-lb-tf/4cbce79459d577d8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_subnet.default_subnet_c",
            "aws_default_vpc.default_vpc",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:731694558213:targetgroup/target-group/1d6c840de77c8ad0",
            "arn_suffix": "targetgroup/target-group/1d6c840de77c8ad0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:731694558213:targetgroup/target-group/1d6c840de77c8ad0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-046676da63bf0342e"
          },
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731694558213:security-group/sg-0e0f3a0de0ec3afc5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0f3a0de0ec3afc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221108212832352800000001",
            "name_prefix": null,
            "owner_id": "731694558213",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-046676da63bf0342e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:731694558213:security-group/sg-06401c28a80d248b4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06401c28a80d248b4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0e0f3a0de0ec3afc5"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20221108212856424700000003",
            "name_prefix": null,
            "owner_id": "731694558213",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-046676da63bf0342e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}